# postgres_api/docs/swagger.json
@@ -225,11 +225,11 @@
                 "parameters": [
                     {
                         "description": "Rawdata next to timerange",
-                        "name": "timestampsearchdto",
+                        "name": "moneothingrawdatatimestampdto",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.timestampsearchdto"
+                            "$ref": "#/definitions/main.moneothingrawdatatimestampdto"
                         }
                     }
                 ],
@@ -344,6 +344,20 @@
                     "type": "string"
                 },
                 "totime": {
+                    "type": "string"
+                },
+                "uniqueidentifier": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.moneothingrawdatatimestampdto": {
+            "type": "object",
+            "properties": {
+                "thingid": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 },
                 "uniqueidentifier": {
